tests/rosetta/out/C/array-concatenation.error
cc: exit status 1
/tmp/array-concatenation.c: In function ‘_mochi_main’:
/tmp/array-concatenation.c:107:22: error: incompatible type for argument 1 of ‘_str’
  107 |   char *tmp15 = _str(concatInts(tmp13, tmp14));
      |                      ^~~~~~~~~~~~~~~~~~~~~~~~
      |                      |
      |                      list_int
/tmp/array-concatenation.c:43:23: note: expected ‘int’ but argument is of type ‘list_int’
   43 | static char *_str(int v) {
      |                   ~~~~^
/tmp/array-concatenation.c:122:39: error: incompatible type for argument 2 of ‘concatAny’
  122 |   char *tmp17 = _str(concatAny(tmp16, j));
      |                                       ^
      |                                       |
      |                                       list_string
/tmp/array-concatenation.c:69:41: note: expected ‘list_int’ but argument is of type ‘list_string’
   69 | list_int concatAny(list_int a, list_int b) {
      |                                ~~~~~~~~~^
/tmp/array-concatenation.c:140:22: error: incompatible type for argument 1 of ‘_str’
  140 |   char *tmp20 = _str(concatInts(tmp18, tmp19));
      |                      ^~~~~~~~~~~~~~~~~~~~~~~~
      |                      |
      |                      list_int
/tmp/array-concatenation.c:43:23: note: expected ‘int’ but argument is of type ‘list_int’
   43 | static char *_str(int v) {
      |                   ~~~~^
