tests/rosetta/out/C/array-concatenation.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:40Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:40Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
list_int concatInts(list_int a, list_int b) {
  list_int out = list_int_create(0);
  for (int tmp1 = 0; tmp1 < a.len; tmp1++) {
    int v = a.data[tmp1];
    int tmp2_data[1];
    list_int tmp2 = {1, tmp2_data};
    tmp2.data[0] = v;
    list_int tmp3 = concat_list_int(out, tmp2);
    out = tmp3;
  }
  for (int tmp4 = 0; tmp4 < b.len; tmp4++) {
    int v = b.data[tmp4];
    int tmp5_data[1];
    list_int tmp5 = {1, tmp5_data};
    tmp5.data[0] = v;
    list_int tmp6 = concat_list_int(out, tmp5);
    out = tmp6;
  }
  return out;
}

list_int concatAny(list_int a, list_int b) {
  list_int out = list_int_create(0);
  for (int tmp7 = 0; tmp7 < a.len; tmp7++) {
    int v = a.data[tmp7];
    int tmp8_data[1];
    list_int tmp8 = {1, tmp8_data};
    tmp8.data[0] = v;
    list_int tmp9 = concat_list_int(out, tmp8);
    out = tmp9;
  }
  for (int tmp10 = 0; tmp10 < b.len; tmp10++) {
    int v = b.data[tmp10];
    int tmp11_data[1];
    list_int tmp11 = {1, tmp11_data};
    tmp11.data[0] = v;
    list_int tmp12 = concat_list_int(out, tmp11);
    out = tmp12;
  }
  return out;
}

int _mochi_main() {
  list_int a = list_int_create(3);
  a.data[0] = 1;
  a.data[1] = 2;
  a.data[2] = 3;
  list_int b = list_int_create(3);
  b.data[0] = 7;
  b.data[1] = 12;
  b.data[2] = 60;
  list_int tmp13 = list_int_create(3);
  tmp13.data[0] = 1;
  tmp13.data[1] = 2;
  tmp13.data[2] = 3;
  list_int tmp14 = list_int_create(3);
  tmp14.data[0] = 7;
  tmp14.data[1] = 12;
  tmp14.data[2] = 60;
  char *tmp15 = _str(concatInts(tmp13, tmp14));
  printf("%s\n", tmp15);
  list_int i = list_int_create(3);
  i.data[0] = 1;
  i.data[1] = 2;
  i.data[2] = 3;
  list_string j = list_string_create(4);
  j.data[0] = "Crosby";
  j.data[1] = "Stills";
  j.data[2] = "Nash";
  j.data[3] = "Young";
  list_int tmp16 = list_int_create(3);
  tmp16.data[0] = 1;
  tmp16.data[1] = 2;
  tmp16.data[2] = 3;
  char *tmp17 = _str(concatAny(tmp16, j));
  printf("%s\n", tmp17);
  list_int l = list_int_create(3);
  l.data[0] = 1;
  l.data[1] = 2;
  l.data[2] = 3;
  list_int m = list_int_create(3);
  m.data[0] = 7;
  m.data[1] = 12;
  m.data[2] = 60;
  list_int tmp18 = list_int_create(3);
  tmp18.data[0] = 1;
  tmp18.data[1] = 2;
  tmp18.data[2] = 3;
  list_int tmp19 = list_int_create(3);
  tmp19.data[0] = 7;
  tmp19.data[1] = 12;
  tmp19.data[2] = 60;
  char *tmp20 = _str(concatInts(tmp18, tmp19));
  printf("%s\n", tmp20);
  return 0;
}
int main() { return _mochi_main(); }
